Coverity analysis defect 162625: Data race condition

XMLWordPrintableJSON

    • Storage Engines - Server Integration
    • Fully Compatible
    • ALL
    • NamePending - 2025-01-21, MooseOnTheLoose - 2025-02-04, FarewellDaniel - 2025-02-18
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Data race condition

      The value of the shared data will be determined by the interleaving of thread execution. Thread shared data is accessed without holding an appropriate lock, possibly causing a race condition
      /data/bazel_cache/1de52aaeb35278243ca29a4785ce7969/execroot/_main_/src/mongo/db/storage/wiredtiger/wiredtiger_kv_engine.cpp:1356: MISSING_LOCK 162625 Accessing "this->_wtBackup.cursor" without holding lock "mongo::WiredTigerBackup.wtBackupDupCursorMutex". Elsewhere, "mongo::WiredTigerBackup.cursor" is written to with "WiredTigerBackup.wtBackupDupCursorMutex" held 2 out of 2 times (1 of these accesses strongly imply that it is necessary).

            Assignee:
            Adeline Chen
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: