SERVER-98145 ensure locked before instead of after cursor is accessed (#32300)

Co-authored-by: Adeline Chen <adeline.chen@mongodb.com>
GitOrigin-RevId: e1b729e809388096eaa40b575995edb77a2c2c48